Updates TFT Missions

--- a/src/Leagueoflegends.Support/Datas/Friends.yml
+++ b/src/Leagueoflegends.Support/Datas/Friends.yml
@@ -26,7 +26,7 @@
   seq: 7
   status: League+
   category: GENERAL
-- name: Cristiano Ronaldo
+- name: Lukewire
   seq: 8
   status: League+
   category: GENERAL
