--- a/src/Leagueoflegends.Support/Datas/FilterSortOptions.yml
+++ b/src/Leagueoflegends.Support/Datas/FilterSortOptions.yml
@@ -77,3 +77,24 @@
 - name: Alphabetical  ↓
   category: ItemSortOptions
   isSelected: false
+
+- name: 2560 x 1440
+  category: WindowSize
+  isSelected: false
+  seq: 1
+- name: 1920 x 1080
+  category: WindowSize
+  isSelected: false
+  seq: 2
+- name: 1600 x 900
+  category: WindowSize
+  isSelected: false
+  seq: 3
+- name: 1280 x 720
+  category: WindowSize
+  isSelected: false
+  seq: 4
+- name: 1024 x 576
+  category: WindowSize
+  isSelected: false
+  seq: 5
