--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -43,6 +43,7 @@
     <ProjectReference Include="..\Leagueoflegends.Main\Leagueoflegends.Main.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Navigate\Leagueoflegends.Navigate.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Profile\Leagueoflegends.Profile.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Settings\Leagueoflegends.Settings.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Shop\Leagueoflegends.Shop.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Social\Leagueoflegends.Social.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Store\Leagueoflegends.Store.csproj" />
