--- a/src/Leagueoflegends.Settings/Leagueoflegends.Settings.csproj
+++ b/src/Leagueoflegends.Settings/Leagueoflegends.Settings.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <None Remove="Themes\Generic.xaml" />
     <None Remove="Themes\Views\GeneralContent.xaml" />
+    <None Remove="Themes\Views\NoticeContent.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,9 +57,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Views\NoticeContent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Leagueoflegends.Support\Leagueoflegends.Support.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Themes\Views\NoticeContent.xaml" />
   </ItemGroup>
 </Project>
