--- a/src/Leagueoflegends.Settings/Leagueoflegends.Settings.csproj
+++ b/src/Leagueoflegends.Settings/Leagueoflegends.Settings.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <None Remove="Themes\Generic.xaml" />
+    <None Remove="Themes\Views\ChatContent.xaml" />
     <None Remove="Themes\Views\GeneralContent.xaml" />
     <None Remove="Themes\Views\NoticeContent.xaml" />
   </ItemGroup>
@@ -53,6 +54,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Include="Themes\Views\ChatContent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Views\GeneralContent.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -69,5 +74,16 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Themes\Views\NoticeContent.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Themes\Views\GeneralContent - Copy.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Themes\Views\ChatContent.xaml" />
   </ItemGroup>
 </Project>
